src/objects/Child2__c.object
<CustomObject>
    <fields>
        <fullName>AutorabitExtId__c</fullName>
        <description>External Id created by AutoRABIT</description>
        <externalId>true</externalId>
        <label>AutorabitExtId__c</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Emp_No__c</fullName>
        <label>Child1</label>
        <referenceTo>Child1__c</referenceTo>
        <relationshipLabel>Child2</relationshipLabel>
        <relationshipName>Child2</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Likes__c</fullName>
        <label>Likes</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <label>Child2</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Child2 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Child2</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>